<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="academiamoviles.com.calculadoraapp.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_activity_etiqueta_N1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:id="@+id/edt_n1"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_activity_etiqueta_N2"
        android:id="@+id/textView2"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/edt_n1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_n2"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_operador_suma"
        android:id="@+id/btn_suma"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:layout_alignTop="@+id/btn_division"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:text="@string/main_activity_operador_resta"
        android:id="@+id/btn_resta"
        android:layout_alignTop="@+id/btn_multiplicacion"
        android:layout_alignLeft="@+id/btn_suma"
        android:layout_alignStart="@+id/btn_suma" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:text="@string/main_activity_operador_mutiplicacion"
        android:id="@+id/btn_multiplicacion"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/btn_division"
        android:layout_alignLeft="@+id/btn_division"
        android:layout_alignStart="@+id/btn_division" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:text="@string/main_activity_operador_division"
        android:id="@+id/btn_division"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_activity_etiqueta_resultado"
        android:id="@+id/textView3"
        android:layout_below="@+id/btn_resta"
        android:layout_toLeftOf="@+id/btn_multiplicacion"
        android:layout_toStartOf="@+id/btn_multiplicacion"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_resultado"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
